;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.3.16:
  * enhancement: memory overhead from the garbage collector's metadata
    is reduced on 64-bit architectures; no change for 32-bit.
  * enhancement: further garbage collector speedups affecting
    pinned objects on conservative backends, and simple-vectors.
  * bug fix: sb-cover does not lose source positions for AND/OR/COND.

changes in sbcl-1.3.16 relative to sbcl-1.3.15:
  * optimization: various small tweaks give around 5% faster garbage
    collection
  * bug fix: better detection of when an impossible code path does
    not need a warning.  (lp#1668619)
  * bug fix: stronger attempts to disable position-independent
    executable building.  (lp#1668986, patch from Mark Wright)
  * bug fix: OPEN :IF-EXISTS NIL signalled a condition on Windows.
    (lp#1674437, reported by Jan Idzikowski)

changes in sbcl-1.3.15 relative to sbcl-1.3.14:
  * minor incompatible change: the reader will when feasible create
    new symbols using a BASE-STRING for the print name.  Additionally,
    string literals can favor the base-string type if desired, though
    the default is to always return UTF-32 strings for compatibility.
    A preference for base-string does not disable reading Unicode.
    The choice is controlled via (SETF READTABLE-BASE-CHAR-PREFERENCE).
    If Unicode was disabled at build time, this setting does nothing.
  * enhancement: SBCL generates more debug information by default.
  * enhancement: type errors provide context information, such as which
    variable is being bound, which slot of which structure is being set.
  * enhancement: if #+immobile-symbols is in build-time *FEATURES* (not
    enabled by default), then symbols will never be moved in memory
    except by SAVE-LISP-AND-DIE. Immobility has helpful implications for
    code generation as well as interaction with foreign routines.
    This feature can only be enabled if #+immobile-space is enabled.