@@ -5,6 +5,9 @@ changes relative to sbcl-1.3.16:
     is reduced on 64-bit architectures; no change for 32-bit.
   * enhancement: further garbage collector speedups affecting
     pinned objects on conservative backends, and simple-vectors.
+  * enhancement: on Linux a custom handler for SIGSEGV can be called
+    for page faults outside of dynamic space by changing the C symbol
+    "sbcl_fallback_sigsegv_handler".
   * bug fix: sb-cover does not lose source positions for AND/OR/COND.
 
 changes in sbcl-1.3.16 relative to sbcl-1.3.15:
